2002-05-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1 (file): Restore icons and images text with some improvement.
	Started on lang check, not done yet.

2002-05-02  Mikhail Kruk  <meshko@cs.brandeis.edu>

	* fvwm/module_interface.c (make_named_packet):
	Applied Mikhail Kruk patch

2002-05-02  olicha  <olivier.chapuis@free.fr>

	* libs/FlocaleCharset.h:
	* libs/Ficonv.c (FiconvSetupConversion):
	* libs/FlocaleCharset.c (FlocaleCharsetSetFlocaleCharset):
	* libs/Flocale.h:
	* libs/Flocale.c (FlocaleGetFftFont): 
	(FlocaleGetFontSet):
	(FlocaleGetFont):
	(FlocaleLoadFont):
	(FlocaleUnloadFont):
	* fvwm/fvwm.1:
	Implemented charset/iconv hints in font name

2002-04-29  Stian Sletner  <stian@sletner.com>

	* fvwm/windowlist.c (CMD_WindowList):
	Added new Windowlist option IconifiedAtEnd

2002-04-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/module_interface.c:
	* libs/Module.c:
	* libs/Module.h:
	moved two constant strings to Module.h, so they may be used by perllib

2002-04-29  olicha  <olivier.chapuis@free.fr>

	* libs/FlocaleCharset.c (FlocaleCharsetSetFlocaleCharset):
	Fixed a core dump if the charset is not found

	* libs/Flocale.c (FlocaleStringToString2b):
	Removed some debug code

2002-04-29  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftGetFontWidths):
	(FftGetFontWidths):
	* libs/Fft.h
	* libs/Flocale.h:
	* libs/Flocale.c (FlocaleGetFont):
	(FlocaleGetFontSet):
	(FlocaleGetFftFont):
	Removed min_char_offset member of the FlocaleFont as it is not use
	since we rotate string for side title

	* libs/Ficonv.c (FiconvSetupConversion):
	* libs/FlocaleCharset.c (FlocaleGetBidiCharset):
	(FlocaleCharsetSetFlocaleCharset):
	* libs/Flocale.h:
	* libs/Flocale.c (FlocaleTextWidth): 
	(FlocaleDrawString): 
	(FlocaleUtf8ToUnicodeStr2b):
	(FlocaleLoadFont): 
	(FlocaleStringToString2b):
	(FlocaleRotateDrawString):
	(FlocaleFontStructDrawString):
	Added support for drawing string with 10646-1 fonts without an utf8