@@ -1,7 +1,13 @@
+2002-05-03  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/colorset.c (parse_tint):
+	(parse_colorset):
+	Fixed tint and bg of the transparent part of a pixmap 
+
 2002-05-02  Dan Espen  <dane@mk.telcordia.com>
 
-	* fvwm/fvwm.1 (file): Restore icons and images text with some improvement.
-	Started on lang check, not done yet.
+	* fvwm/fvwm.1 (file): Restore icons and images text with some
+	improvement. Started on lang check, not done yet.
 
 2002-05-02  Mikhail Kruk  <meshko@cs.brandeis.edu>
 
